Implemented listing Reviews

--- a/A11Y.md
+++ b/A11Y.md
@@ -1,1 +1,16 @@
+Text Alternatives for Images:
+- Descriptive alt text was provided for images to convey their meaning if the images are not availble or for users who rely on screen readers
+- Text alternatives were implemented for graphics and icons. Eg (when booking; the bedrooms, bathroom icons had labels to allow users to distinguish between them and avoid confusion)
+
+Readable Text:
+- Clear and legible fonts with an appropriate font size were used.
+- We used appropriate heading tags (h1, h2, large, small) to create a logical document outline.
+
+Aria Roles and Attributes:
+- ARIA (Accessible Rich Internet Applications) roles and attributes were implemented to enhance the accessibility of the content on the page.
+- ARIA labels were particularly used on buttons to allow users to effortesly naviagte through the application
+
+Form Accessibility:
+- We made sure that the form fields had clear and programmatically associated labels.
+- Also error messages and alerts were implemented in a way that was perceivable by screen readers.
 
